fixCodeFollowPRReview